style.css
@font-face {
    font-family: Bookmania;
    src: url('./assets/fonts/Bookmania\ Bold.otf') format('opentype');
}

@font-face {
    font-family: Futura;
    font-weight: 700;
    src: url('./assets/fonts/FuturaStd-Bold.otf') format('opentype');
}

@font-face {
    font-family: Futura;
    font-weight: 400;
    src: url('./assets/fonts/FuturaStd-Book.otf') format('opentype');
}

* {
    font-family: 'Futura', sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1,
h2,
h3 {
    font-family: 'Bookmania', serif;
}

p {
    font-size: 1.1rem;
    line-height: 1.4;
}

.header {
    padding: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 70px;
}

.logo {
    height: 80px;
}

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem 2rem 2rem 2rem;
    height: max-content;
    background-color: #222;
    color: #fff;
    width: 100%;
}

h1.title {
    font-size: 1.7rem;
}

.form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    width: 100%;
    margin-bottom: 1rem;
}

.text,
.submit {
    width: 100%;
    padding: 1rem;
    border-radius: 5px;
    border: none;
    outline: none;
}

.text:focus {
    border: 2px solid #cc222c;
}

.submit {
    background-color: #cc222c;
    color: #fff;
}

.courses,
.introContainer {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    background-color: #ddd;
    width: 100%;
}

.mockupWrapper {
    width: 100%;
}

.mockup {
    width: 100%;
}

.intro {
    padding: 1rem;
}

h2.title {
    font-weight: 700;
    font-size: 1.5rem;
}

.verticals {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    padding: 1rem 0;
    min-height: max-content;
    height: 100%;
}

.titleWrapper {
    display: flex;
    align-items: center;
    gap: 1rem;
    width: 100%;
}

.education {
    width: 100%;
    background-color: #fff;
    padding: 1rem 0;
    border-radius: 10px;
    padding: 1rem;
    height: 100%;
}

h3.title {
    font-size: 1.5rem;
    font-weight: 700;
}

.icon {
    min-width: 50px;
    min-height: 50px;
    width: 50px;
    height: 50px;
    background-color: #cc222c;
    padding: 0.5rem;
    fill: white;
    border-radius: 50%;
}

.more {
    display: block;
    text-align: center;
    text-decoration: none;
    color: white;
    background: #222;
    padding: 0.5rem 1rem;
    border-radius: 5px;
}

.heroImageWrapper {
    display: none;
}

@media (min-width: 480px) {
    .formContainer {
        max-width: 360px;
    }
    .submit,
    .more {
        transition: 0.3s all ease-in-out;
    }
    .submit:hover {
        cursor: pointer;
        background-color: #ab232c;
    }
    .more:hover {
        cursor: pointer;
        background-color: #111;
    }

    .courses,
    .introContainer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        max-width: 1280px;
    }

    .mockupWrapper,
    .intro,
    .education {
        max-width: 600px;
    }
}

@media (min-width: 720px) {
    .introContainer {
        flex-direction: row;
    }
    .formContainer {
        padding: 0 3rem;
        max-width: 480px;
    }
    .hero {
        flex-direction: row;
        justify-content: center;
        padding: 0;
        margin-bottom: -5px;
    }
    .heroImageWrapper {
        display: block;
        width: 100%;
        height: 100%;
    }
    .heroImage {
        object-position: left center;
        object-fit: cover;
        width: 100%;
        height: 600px;
    }
    .mockupWrapper,
    .intro {
        width: 50%;
    }
}

@media (min-width: 1028px) {
    .verticals {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        padding: 1rem;
        gap: 2rem;
    }
    .icon {
        height: 30px;
        width: 30px;
        padding: 0.2rem;
    }
    .verticals .paragraph {
        font-size: 1rem;
    }
    .education {
        display: flex;
        flex-direction: column;
    }
    .education .paragraph {
        flex-grow: 1;
    }
}

@media (min-width: 1280px) {
    .formContainer {
        padding: 0 3rem;
    }
    .hero {
        max-width: 1280px;
        border-radius: 30px 30px 0 0;
        overflow: hidden;
    }
    .heroImageWrapper {
        max-width: 100%;
    }
    .courses {
        border-radius: 0 0 30px 30px;
        margin-bottom: 2rem;
    }
}

